[tool.poetry]
name = "clock-in-gzhu"
version = "0.1.0"
description = ""
authors = ["LihaoLikeOrangeJuice <lihao-deng@outlook.com>"]
readme = "README.md"
packages = [{include = "clock_in_gzhu"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"
loguru = "^0.6.0"
selenium = "^4.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
